// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyFilterOptions renders for address: address 1`] = `
.c0 .form.Control {
  width: 100%;
  height: 100%;
  border: none;
  font-size: 16px;
  box-sizing: border-box;
  flex: 1 1;
  min-width: 0;
  margin-bottom: 0;
}

.c0 .suggestionList {
  background-color: white;
  border-style: solid;
  border-color: lightslategray;
  border-width: thin;
  font-size: 14px;
  text-align: left;
  max-height: 600px;
  margin: 0;
  padding: 0;
  position: absolute;
  z-index: 999;
  top: 40px;
  left: -50px;
}

.c0 option {
  padding: 10px 5px;
  word-wrap: break-word;
  width: 400px;
  overflow: hidden;
  cursor: pointer;
  color: #494949;
}

.c0 option:hover {
  background-color: #007bff;
  color: #fff;
}

<div>
  <div
    class="input-group"
  >
    <div
      class="input-group"
    >
      <div
        class="select-row row"
        controlid="input-searchBy"
      >
        <div
          class="select-column col-md-auto"
        >
          <select
            class="form-select form-control"
            name="searchBy"
          >
            <option
              class="option"
              value="address"
            >
              Address
            </option>
            <option
              class="option"
              value="pid"
            >
              PID/PIN
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      class="input-group-content"
    >
      <div
        class="c0 GeocoderAutoComplete"
      >
        <div
          class=""
        >
          <div>
            <input
              class="form-control"
              field="address"
              id="input-address"
              name="address"
              placeholder="Enter an address"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyFilterOptions renders for pid: pid 1`] = `
<div>
  <div
    class="input-group"
  >
    <div
      class="input-group"
    >
      <div
        class="select-row row"
        controlid="input-searchBy"
      >
        <div
          class="select-column col-md-auto"
        >
          <select
            class="form-select form-control"
            name="searchBy"
          >
            <option
              class="option"
              value="address"
            >
              Address
            </option>
            <option
              class="option"
              value="pid"
            >
              PID/PIN
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      class="input-group-content"
    >
      <div
        class="input-flex"
        id="input-pid"
      >
        <div>
          <input
            class="form-control"
            name="pid"
            placeholder="Enter a PID or PIN"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
